[tool.poetry]
name = "pycounts_kexin_shi"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Kexin Shi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "<3.10"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
